init: suppress lint warnings for existing cgroups setup
mkdir and chown in cgroups.conf cause cros lint errors without
"croslint: disable".

They should have been security-approved since they are already
submitted.

BUG=b:308367275
TEST=cros lint init/upstart/cgroups.conf

Change-Id: Ic0f3021c6c231065f36738e22815cbe0b5cb02ef
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5274934
Tested-by: Shin Kawamura <kawasin@google.com>
Commit-Queue: Shin Kawamura <kawasin@google.com>
Reviewed-by: Mike Frysinger <vapier@chromium.org>

--- a/init/upstart/cgroups.conf
+++ b/init/upstart/cgroups.conf
@@ -30,7 +30,7 @@ script
     # Verify that the subsystem is available on our kernel.
     grep -q ${subsys} /proc/cgroups || continue
 
-    mkdir -p /sys/fs/cgroup/${subsys}
+    mkdir -p /sys/fs/cgroup/${subsys} # croslint: disable
     mount_opts="${default_mount_opts}"
     if [ "${subsys}" = "cpuset" ] && [ "${CPUSET_NOPREFIX}" = true ]; then
       mount_opts="${mount_opts},noprefix"
@@ -52,30 +52,37 @@ script
     fi
 
     if [ "${subsys}" != "net_cls" ]; then
-      mkdir -p /sys/fs/cgroup/${subsys}/session_manager_containers
+      mkdir -p /sys/fs/cgroup/${subsys}/session_manager_containers \
+          # croslint: disable
       if id -u android-root 2>/dev/null; then
         chown android-root:android-root \
-            /sys/fs/cgroup/${subsys}/session_manager_containers
+            /sys/fs/cgroup/${subsys}/session_manager_containers \
+            # croslint: disable
       fi
       if id -u user-containers 2>/dev/null; then
-        mkdir -p /sys/fs/cgroup/${subsys}/user_containers
+        mkdir -p /sys/fs/cgroup/${subsys}/user_containers # croslint: disable
         chown user-containers:user-containers \
-            /sys/fs/cgroup/${subsys}/user_containers
+            /sys/fs/cgroup/${subsys}/user_containers # croslint: disable
         if [ "${subsys}" = "freezer" ]; then
-          chown power:power /sys/fs/cgroup/freezer/user_containers/freezer.state
+          chown power:power \
+              /sys/fs/cgroup/freezer/user_containers/freezer.state \
+              # croslint: disable
         fi
       fi
-      mkdir -p /sys/fs/cgroup/${subsys}/chronos_containers
-      chown chronos:chronos /sys/fs/cgroup/${subsys}/chronos_containers
+      mkdir -p /sys/fs/cgroup/${subsys}/chronos_containers # croslint: disable
+      chown chronos:chronos /sys/fs/cgroup/${subsys}/chronos_containers \
+          # croslint: disable
     fi
 
     # powerd needs to be able to freeze each child of the root freezer, so give
     # it ownership of the freezer.state file (and only that file).
     if [ "${subsys}" = "freezer" ]; then
       chown power:power \
-          /sys/fs/cgroup/${subsys}/session_manager_containers/freezer.state
+          /sys/fs/cgroup/${subsys}/session_manager_containers/freezer.state \
+          # croslint: disable
       chown power:power \
-          /sys/fs/cgroup/${subsys}/chronos_containers/freezer.state
+          /sys/fs/cgroup/${subsys}/chronos_containers/freezer.state \
+          # croslint: disable
     fi
   done
 
@@ -87,9 +94,9 @@ script
     cpuset_root_mems=$(cat "${cpuset_root_dir}/mems")
     for cset in chrome chrome/urgent chrome/non-urgent; do
       cset_dir="${cpuset_root_dir}/${cset}"
-      mkdir -p "${cset_dir}"
+      mkdir -p "${cset_dir}" # croslint: disable
       chown chronos:chronos "${cset_dir}/cgroup.procs" # croslint: disable
-      chown chronos:chronos "${cset_dir}/tasks"
+      chown chronos:chronos "${cset_dir}/tasks" # croslint: disable
       echo "${cpuset_root_cpus}" > "${cset_dir}/cpus"
       echo "${cpuset_root_mems}" > "${cset_dir}/mems"
     done
@@ -97,7 +104,7 @@ script
     for cset in user_space user_space/urgent user_space/non-urgent \
         user_space/media; do
       cset_dir="${cpuset_root_dir}/${cset}"
-      mkdir -p "${cset_dir}"
+      mkdir -p "${cset_dir}" # croslint: disable
       echo "${cpuset_root_cpus}" > "${cset_dir}/cpus"
       echo "${cpuset_root_mems}" > "${cset_dir}/mems"
     done
