system-proxy: remove CurlSocket
This was created to defeat some aspects of the Socket
abstraction, and the recent changes to the Socket class also
meant we were making some further assumptions about the type
of sockets we were working with, the unwinding of which would
have involved copying code from Socket itself. Instead of doing
this, we should just track our resources separately in each
place we are using them and then we can simplify things by only
using standard scoping/RAII tools.

BUG=b:324429360
TEST=unit tests, policy.SystemProxySettings.*,
  network.SystemProxyForArc, network.SystemProxyForSystemServices,
  network.ProxyResolutionService

Change-Id: I9754784c224d5b63a8a40eee7e42ef227e8d6ed9
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5281872
Tested-by: Eric Caruso <ejcaruso@chromium.org>
Auto-Submit: Eric Caruso <ejcaruso@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>
Commit-Queue: Hugo Benichi <hugobenichi@google.com>

--- a/system-proxy/BUILD.gn
+++ b/system-proxy/BUILD.gn
@@ -89,7 +89,7 @@ static_library("libsystemproxy") {
 # System-proxy worker library (shared between executables and tests).
 static_library("libsystemproxyworker") {
   sources = [
-    "curl_socket.cc",
+    "curl_scopers.cc",
     "http_util.cc",
     "protobuf_util.cc",
     "proxy_connect_job.cc",
