patchpanel: make sure it starts with openssh-server
BUG=b:324447361
TEST=manual - run betty with modified patchpanel.conf

Change-Id: Ia9d65a83b30edbe9ec9a5f55848128ed3aee2578
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5280431
Tested-by: Lepton Wu <lepton@chromium.org>
Auto-Submit: Lepton Wu <lepton@chromium.org>
Reviewed-by: Taoyu Li <taoyl@chromium.org>
Commit-Queue: Lepton Wu <lepton@chromium.org>

--- a/patchpanel/init/patchpanel.conf
+++ b/patchpanel/init/patchpanel.conf
@@ -5,7 +5,7 @@
 description     "Starts platform guest networking services"
 author          "chromium-os-dev@chromium.org"
 
-start on starting system-services
+start on starting system-services or starting openssh-server
 stop on stopping system-services
 
 respawn
