verity: Add DmVerityTable to manage dm-verity tables
.. as a way to better managed and maintain the dm-verity table format
within the tooling.

BUG=b:322180104
TEST=FEATURES=test emerge $PKG

Change-Id: Ibc96e3e994737fd09fb73cbff4f9ad8c95e385c8
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5281465
Tested-by: Jae Hoon Kim <kimjae@chromium.org>
Reviewed-by: Jorge Lucangeli Obes <jorgelo@chromium.org>
Commit-Queue: Jae Hoon Kim <kimjae@chromium.org>

--- a/verity/BUILD.gn
+++ b/verity/BUILD.gn
@@ -36,6 +36,7 @@ shared_library("libdm-bht") {
   sources = [
     "blake2b/blake2b.cc",
     "dm-bht.cc",
+    "dm_verity_table.cc",
     "file_hasher.cc",
     "hasher.cc",
   ]
@@ -59,6 +60,7 @@ install_config("install_headers") {
   sources = [
     "dm-bht-userspace.h",
     "dm-bht.h",
+    "dm_verity_table.h",
     "file_hasher.h",
   ]
   install_path = "/usr/include/verity"
@@ -94,6 +96,7 @@ if (use.test) {
   executable("verity_tests") {
     sources = [
       "dm-bht_test.cc",
+      "dm_verity_table_test.cc",
       "file_hasher_test.cc",
     ]
     configs += [
