--- a/PRESUBMIT.cfg
+++ b/PRESUBMIT.cfg
@@ -36,6 +36,7 @@ cros_license_check:
   --exclude_regex=^vm_tools/sommelier/virtualization/linux-headers/
   --exclude_regex=^vm_tools/reference_vm/data/usr/src
   --exclude_regex=verity/blake2b/
+  --exclude_regex=soul/gravedigger/tests/test_log_file
 
 stray_whitespace_check:
   --exclude_regex=/testdata/
