--- a/soul/gravedigger/Cargo.toml
+++ b/soul/gravedigger/Cargo.toml
@@ -3,5 +3,20 @@ name = "gravedigger"
 version = "0.1.0"
 edition = "2021"
 authors = ["The ChromiumOS Authors"]
+include = ["Cargo.toml", "src/*"]
+
+[lib]
+name = "gravedigger_rs"
+path = "src/lib.rs"
+crate-type = ["staticlib"]
+
+[features]
+chromeos = ["libchromeos"]
 
 [dependencies]
+cxx = "1.0"
+log = "0.4"
+libchromeos = { path = "../../libchromeos-rs", optional = true } # provided by ebuild
+
+[dev-dependencies]
+tempfile = "3.4"
