ml_core: Add metrics related to DLC install
* Success/failure of DLC installation initiation & final outcome
* Specific DLC Service error codes
* Number of attempts made when DLC service is busy

BUG=b:324160257
TEST=Tried a success and failure case & triggered install using image
TEST=search chrome://flags. Verified the histograms appeared on
TEST=chrome://histograms.

Cq-Depend: chromium:5302356
Change-Id: Ie2252d24d4262b0cbe7b367e57ed9ea2ec46630f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5294876
Commit-Queue: Andrew Moylan <amoylan@chromium.org>
Tested-by: Andrew Moylan <amoylan@chromium.org>
Reviewed-by: Jim Pollock <jmpollock@chromium.org>

--- a/ml_core/dlc/BUILD.gn
+++ b/ml_core/dlc/BUILD.gn
@@ -18,6 +18,7 @@ pkg_config("target_defaults") {
   pkg_deps = [
     "libchrome",
     "libdlcservice-client",
+    "libmetrics",
     "protobuf",
     "system_api",
   ]
@@ -27,6 +28,7 @@ static_library("dlc_client") {
   sources = [
     "dlc_client.cc",
     "dlc_loader.cc",
+    "dlc_metrics.cc",
   ]
-  configs += [ ":target_defaults" ]
+  public_configs = [ ":target_defaults" ]
 }
