shill: Fix key management for OWE on Marvell boards
Marvell based boards do not support OWE, so:
- for pure OWE networks make them non-connectable
- for transitional OWE do not use "owe" key management but connect to
  the public BSS

BUG=b:323091163
TEST=FEATURES=test emerge-$BOARD shill
TEST=Verify that pure OWE network on Marvell boards is not connectable
  (visible in the UI but without a button to connect).  Also check if
  wifi.TransOweConnect.public is passing on these boards.

Change-Id: If3bda39dcb2b955029c389a47d78f56f137c20c0
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5286277
Tested-by: Andrzej Ostruszka <andrzejo@google.com>
Reviewed-by: Kevin Lund <kglund@google.com>
Commit-Queue: Andrzej Ostruszka <andrzejo@google.com>
Reviewed-by: Jintao Lin <jintaolin@chromium.org>
Reviewed-by: Matthew Wang <matthewmwang@chromium.org>

--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -101,7 +101,9 @@ pkg_config("target_defaults") {
   }
 
   if (!use.wpa3_sae) {
-    defines += [ "DISABLE_WPA3_SAE" ]
+    # Currently only Marvell based boards do not support WPA3.  These
+    # also do not support OWE so this define reflects both.
+    defines += [ "DISABLE_WPA3_OWE" ]
   }
 
   pkg_deps = [
