spaced: Move to system-services
Based on its description and my understanding of its provided
functionality, this service is not critical to getting Chrome running.
Therefore it should start with system-services, not boot-services.

https://www.chromium.org/chromium-os/chromiumos-design-docs/boot-design/

BUG=none
TEST=CQ

Change-Id: I3b3529a42caa10d998150c31bab41ce54c593117
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5288317
Reviewed-by: Sarthak Kukreti <sarthakkukreti@google.com>
Commit-Queue: Brian Norris <briannorris@chromium.org>
Tested-by: Brian Norris <briannorris@chromium.org>
Auto-Submit: Brian Norris <briannorris@chromium.org>

--- a/spaced/init/spaced.conf
+++ b/spaced/init/spaced.conf
@@ -6,8 +6,8 @@ description     "Disk usage daemon for ChromeOS"
 author          "chromium-os-dev@chromium.org"
 
 # Start once d-bus is ready.
-start on started boot-services
-stop on stopping boot-services
+start on started system-services
+stop on stopping system-services
 
 # Minijail forks off the desired process.
 expect fork
