arc: Replace arcvm-host Upstart with tmpfiles.d
We normally shouldn't run Upstart jobs blocking boot-services without
explanation. Fortunately, this is all trivial to represent with
tmpfiles.d, so we can drop the scripts entirely.

This creates a few diffs in the /run/arcvm filesystem tree:

* u:object_r:oemfs:s0 -> u:object_r:oem_fs:s0 (the latter is the
  spelling in our actual SELinux policy; I assume the former was a typo)

* various dirs in /run/arcvm/host_generated moved from
  u:object_r:cros_run_arcvm:s0 to u:object_r:oem_fs:s0, because that's
  what's specified in our SELinux policies

* these become unlabeled:
    /run/arcvm/host_generated/combined.prop u:object_r:unlabeled:s0
    /run/arcvm/host_generated/fstab u:object_r:unlabeled:s0

It doesn't appear these changes cause any noticeable problem.

BUG=none
TEST=`find /run/arcvm -exec getfilecon {} \; -exec ls -lad {} \;`

Change-Id: Id2794a27031fd15c2b969c577961a0f4092e3132
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5288318
Reviewed-by: Hidehiko Abe <hidehiko@chromium.org>
Tested-by: Brian Norris <briannorris@chromium.org>
Commit-Queue: Brian Norris <briannorris@chromium.org>

--- a/arc/vm/scripts/BUILD.gn
+++ b/arc/vm/scripts/BUILD.gn
@@ -10,6 +10,7 @@ group("all") {
     ":install_init_config",
     ":install_init_scripts",
     ":install_rsyslog",
+    ":install_tmpfiles",
   ]
 }
 
@@ -22,7 +23,6 @@ install_config("install_android-sh") {
 install_config("install_init_scripts") {
   sources = [
     "init/arcvm-fsverity-certs.conf",
-    "init/arcvm-host.conf",
     "init/arcvm-post-login-services.conf",
     "init/arcvm-post-vm-start-services.conf",
     "init/arcvm-pre-login-services.conf",
@@ -53,4 +53,9 @@ install_config("install_certs") {
 install_config("install_rsyslog") {
   sources = [ "rsyslog.arc.conf" ]
   install_path = "/etc/rsyslog.d"
+}
+
+install_config("install_tmpfiles") {
+  sources = [ "init/tmpfiles.d/arcvm-host.conf" ]
+  install_path = "tmpfilesd"
 }
