--- a/libec/BUILD.gn
+++ b/libec/BUILD.gn
@@ -27,9 +27,11 @@ default_pkg_deps = [
   "absl",
   "libbrillo",
   "libchrome",
-  "libpower_manager-client",
   "libusb-1.0",
 ]
+if (!use.cros_host) {
+  default_pkg_deps += [ "libpower_manager-client" ]
+}
 pkg_config("target_defaults_pkg_deps") {
   pkg_deps = default_pkg_deps
 }
@@ -42,7 +44,6 @@ source_set("libec_common") {
     "display_soc_command.cc",
     "ec_command_factory.cc",
     "ec_panicinfo.cc",
-    "ec_usb_device_monitor.cc",
     "ec_usb_endpoint.cc",
     "fingerprint/fp_context_command.cc",
     "fingerprint/fp_context_command_factory.cc",
@@ -84,6 +85,9 @@ source_set("libec_common") {
     "smart_discharge_command.cc",
     "versions_command.cc",
   ]
+  if (!use.cros_host) {
+    sources += [ "ec_usb_device_monitor.cc" ]
+  }
   configs += [
     ":target_defaults_pkg_deps",
     "//common-mk:pic",
@@ -111,7 +115,6 @@ install_config("install_libec_headers") {
     "ec_command_async.h",
     "ec_command_factory.h",
     "ec_panicinfo.h",
-    "ec_usb_device_monitor.h",
     "ec_usb_endpoint.h",
     "flash_info_command.h",
     "flash_info_params.h",
@@ -148,6 +151,9 @@ install_config("install_libec_headers") {
     "smart_discharge_command.h",
     "versions_command.h",
   ]
+  if (!use.cros_host) {
+    sources += [ "ec_usb_device_monitor.h" ]
+  }
   install_path = "/usr/include/libec"
 }
 
@@ -216,7 +222,6 @@ if (use.test) {
       "ec_command_async_test.cc",
       "ec_command_test.cc",
       "ec_panicinfo_test.cc",
-      "ec_usb_device_monitor_test.cc",
       "ec_usb_endpoint_test.cc",
       "fingerprint/fp_context_command_factory_test.cc",
       "fingerprint/fp_context_command_test.cc",
@@ -276,6 +281,9 @@ if (use.test) {
       "thermal/thermal_auto_fan_ctrl_command_test.cc",
       "versions_command_test.cc",
     ]
+    if (!use.cros_host) {
+      sources += [ "ec_usb_device_monitor_test.cc" ]
+    }
     configs += [
       "//common-mk:test",
       ":target_defaults_pkg_deps",
