verity: create hasher abstraction
BUG=b:322886034
TEST=unittest

Change-Id: Ie7f0f2314d1184324d5ea31616f6ce149f0f949e
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5289834
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>
Commit-Queue: Daniil Lunev <dlunev@chromium.org>
Tested-by: Daniil Lunev <dlunev@chromium.org>

--- a/verity/BUILD.gn
+++ b/verity/BUILD.gn
@@ -33,6 +33,7 @@ shared_library("libdm-bht") {
   sources = [
     "dm-bht.cc",
     "file_hasher.cc",
+    "hasher.cc",
   ]
   install_path = "lib"
   configs += [ ":target_defaults" ]
