verity: add local blake2b implementation
The implementation is taken from official reference repository
https://github.com/BLAKE2/BLAKE2/tree/master and trim down a bit
with no code modifications otherwise. Lint complains a lot about
that code, but we would never need to modify it, so it should not
be a problem. Some other checks are being shunted in PRESUBMIT.cfg

BUG=b:322886034
TEST=unittest

Change-Id: I726c71779c32f662597dd703eed53956fb80e87f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5289835
Tested-by: Daniil Lunev <dlunev@chromium.org>
Commit-Queue: Daniil Lunev <dlunev@chromium.org>
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>

--- a/PRESUBMIT.cfg
+++ b/PRESUBMIT.cfg
@@ -30,14 +30,17 @@ cros_license_check:
   --exclude_regex=^vm_tools/sommelier/perfetto/sdk/perfetto\.(cc|h)
   --exclude_regex=^vm_tools/sommelier/virtualization/linux-headers/
   --exclude_regex=^vm_tools/reference_vm/data/usr/src
+  --exclude_regex=verity/blake2b/
 
 stray_whitespace_check:
   --exclude_regex=/testdata/
+  --exclude_regex=verity/blake2b/
 
 long_line_check:
   --exclude_regex=(/testdata/|^sepolicy/(policy|shared|file_contexts)/)
   --exclude_regex=/tmpfiles.d/
   --exclude_regex=/DIR_METADATA
+  --exclude_regex=verity/blake2b/
 
 cargo_clippy_check:
   --project=chromeos-dbus-bindings/
@@ -59,3 +62,4 @@ cargo_clippy_check:
 tab_check:
   --exclude_regex=chromeos-config/crosid/.*\.(c|h)$
   --exclude_regex=vm_tools/reference_vm/data/.*\.(c|h)$
+  --exclude_regex=verity/blake2b/
