patchpanel: Disable NIC hotplug
BUG=b:294777126
BUG=b:324979531
TEST=CQ

Change-Id: I16493581e41e242435f25b0ee7b7b8440f49fba8
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5289615
Commit-Queue: Taoyu Li <taoyl@chromium.org>
Tested-by: Taoyu Li <taoyl@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -125,12 +125,8 @@ shared_library("libpatchpanel-util") {
 }
 
 static_library("libpatchpanel") {
-  # NIC hotplug is only enabled on ARCVM with x86_64 architecture.
-  if (use.amd64 && use.arcvm) {
-    nic_hotplug = true
-  } else {
-    nic_hotplug = false
-  }
+  # NIC hotplug is temporarily disabled while being stabilized.
+  nic_hotplug = false
 
   sources = [
     "adb_proxy.cc",
