minios: minios_util cli tool for log extraction
Tool to extract and decrypt minios logs from stateful unencrypted or
disk. This tool will be used as an upstart job to move logs from minios
locations to `/mnt/stateful_partition/encrypted` on chromeos, which
will enable us to leverage log rotation policies as well as feedback
reporting. Add helpers to mount stateful in miniOS.

BUG=b:277753015
TEST=`FEATURES=test emerge-${BOARD} minios`
TEST=Retrieved logs from disk and unencrypted on dut from chromeos and
minios

Change-Id: Ib144d0d68da5ebed87991577e25a8732007a8947
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5291966
Reviewed-by: Yuanpeng Ni‎ <yuanpengni@chromium.org>
Commit-Queue: Saketh Pothireddy <spothire@google.com>
Reviewed-by: Jae Hoon Kim <kimjae@chromium.org>
Tested-by: Saketh Pothireddy <spothire@google.com>

--- a/minios/BUILD.gn
+++ b/minios/BUILD.gn
@@ -13,6 +13,7 @@ group("all") {
     ":minios_adaptors",
     ":minios_client",
     ":minios_proxies",
+    ":minios_util",
   ]
   if (use.test) {
     deps += [ ":minios_test" ]
@@ -97,6 +98,13 @@ executable("minios") {
   sources = [ "main.cc" ]
   configs += [ ":target_defaults" ]
   deps = [ ":libminios" ]
+}
+
+executable("minios_util") {
+  sources = [ "minios_util.cc" ]
+  configs += [ ":target_defaults" ]
+  deps = [ ":libminios" ]
+  install_path = "bin"
 }
 
 executable("minios_client") {
