crosier-chrome: Update contact emails in featured tests
cros-telemetry is being absorbed into chromeos-data-eng. Replace all the
"cros-telemetry@google.com" in test yamls with
"chromeos-data-eng@google.com"

Also remove Googlers affected by the layoffs

BUG=b:324495306
TEST=`grep -R cros-telemetry crosier-chrome/test_metadata` has no hits

Change-Id: Ia8f44c67ec0fe4b68c454c264ab0cb96f493a22b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5293080
Auto-Submit: Ian Barkley-Yeung <iby@chromium.org>
Commit-Queue: Seewai Fu <seewaifu@google.com>
Tested-by: Ian Barkley-Yeung <iby@chromium.org>
Reviewed-by: Seewai Fu <seewaifu@google.com>

--- a/crosier-chrome/test_metadata/featured_integration_test.yaml
+++ b/crosier-chrome/test_metadata/featured_integration_test.yaml
@@ -10,9 +10,8 @@ harness: "crosier"
 category: "integration"
 owners:
   - email: "jamescook@chromium.org"
-  - email: "kendraketsui@google.com"
   - email: "mutexlox@google.com"
-  - email: "cros-telemetry@google.com"
+  - email: "chromeos-data-eng@google.com"
   - email: "chromeos-sw-engprod@google.com"
 hw_agnostic: True
 criteria: |
