init: Add tpm_setup object
Separe TPM functions from filesystem functions by adding a TpmSetup
object to extract and set information from/to the TPM.

BUG=b:172221451
TEST=Compile, CQ

Change-Id: Ic83a38c71a1c08266e0e3158a255bbb634ece5fb
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5298611
Reviewed-by: Brian Norris <briannorris@chromium.org>
Reviewed-by: Andrey Pronin <apronin@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>

--- a/init/BUILD.gn
+++ b/init/BUILD.gn
@@ -219,6 +219,7 @@ static_library("mount_encrypted_lib") {
     "mount_encrypted/encryption_key.cc",
     "mount_encrypted/mount_encrypted_metrics.cc",
     "mount_encrypted/tpm.cc",
+    "mount_encrypted/tpm_setup.cc",
   ]
   configs += [ ":target_defaults" ]
   defines = [ "CHROMEOS_ENVIRONMENT=1" ]
